# langchain-backend

./: .gitignore  docker-compose.yml  pyproject.toml
src/ai_backend/: config.py  main.py
src/ai_backend/graphs/: langgraph_pipeline.py
src/ai_backend/routers/: chat.py  vector.py
src/ai_backend/services/: llm_service.py  supabase_service.py
